# tictactoe

./: pyproject.toml  tic_tac_toe_q_table.pkl  tic_tac_toe_q_table_2.pkl  tic_tac_toe_q_table_3.pkl  tic_tac_toe_q_table_4.pkl  tic_tac_toe_q_table_5.pkl  tic_tac_toe_q_table_6.pkl
notebooks/: first_notebook.ipynb
notebooks/.ipynb_checkpoints/: first_notebook-checkpoint.ipynb
src/tictactoe/: GameEnv.py  play_game.py
