[project]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = [
    {name = "Guillaume Bonnet",email = "guillaume.bonnet@euranova.eu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "tictactoe", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
